Search on releaseDate. Implement using explicit parameters, which stops SQL injection.

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -76,3 +76,5 @@ allele = Allele
 alleleRelaxValue = Relax allele length value by
 noGeneticSexes = No genetic sex analyses have been performed.
 geneticSex = Sex was determined from genetic analysis as
+releaseDate=Release Date
+releaseDateFormat=Use format dd/mm/yyyy
